...
                                </constraints>
                            </imageView>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xRk-lI-Wht" customClass="CustomTextField" customModule="sachithsilva_cobsccomp182p_018" customModuleProvi
                                <rect key="frame" x="20" y="203" width="335" height="36"/>
                                <constraints>
...
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dQZ-nz-wVc" customClass="CustomTextField" customModule="sachithsilva_cobsccomp182p_018" customModuleProvider="
                                <rect key="frame" x="20" y="249" width="335" height="36"/>
                                <constraints>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                <state key="normal" title="Log In" backgroundImage="bluebtn-long">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                <state key="normal" title="Create New NIBM Event Account" backgroundImage="greenbtn-long">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dr8-RA-6b5" customClass="CustomTextField" customModule="sachithsilva_cobsccomp182p_018" customModuleProvider="tar
                                <rect key="frame" x="20" y="191" width="335" height="30"/>
                                <constraints>
...
                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Community/User Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="67m-iO-xcG">
                                <rect key="frame" x="20" y="296" width="335" height="30"/>
                                <constraints>
...
                                <rect key="frame" x="20" y="442" width="335" height="62"/>
                                <color key="backgroundColor" red="0.16506117579999999" green="0.29464590550000003" blue="0.57289689779999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <state key="normal" title="Sign Up" backgroundImage="bluebtn-long">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Contact Number" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="f9e-ih-pIX">
                                <rect key="frame" x="20" y="356" width="335" height="30"/>
                                <constraints>
...
